--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,10 @@
-title: Midnight theme
-description: Midnight is a theme for GitHub Pages.
-show_downloads: true
-google_analytics:
+title: A World Divided
+tagline: A Graphical Comparison
+description: This project will take data from geocoding websites and API's dervivided from them to assemble a list of administrative divisons of countries. I have taken data which gives a particuarly country's admin divisions,
 theme: jekyll-theme-midnight
+remote_theme: pages-themes/midnight@v0.2.0
+    plugins:
+    - jekyll-remote-theme
+
+'script/bootstrap'
+
